--- a/NSAPI/NSAPI.csproj
+++ b/NSAPI/NSAPI.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="API.cs" />
     <Compile Include="MessageEventArgs.cs" />
+    <Compile Include="Params.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestForm.cs">
       <SubType>Form</SubType>
